--- a/Tools/Uplauncher/MainWindow.xaml
+++ b/Tools/Uplauncher/MainWindow.xaml
@@ -58,6 +58,23 @@
         </Grid.RowDefinitions>
         <Image Source="/Arrière-plan.png" Height="600" Grid.RowSpan="2" />
         <Canvas Grid.RowSpan="2">
+            <!-- Menu déroulant nombre dofus-->
+            <ComboBox x:Name="NumberComboBox" 
+                      Visibility="{Binding IsStatusTextBoxVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+                      IsEnabled="{Binding IsNumberComboBoxEnabled}"
+                      IsReadOnly="True"
+                      Width="50" 
+                      Canvas.Left="752" Canvas.Top="557" 
+                      SelectionChanged="NumberComboBox_SelectionChanged">
+                <ComboBoxItem Content="1" IsSelected="True"/>
+                <ComboBoxItem Content="2"/>
+                <ComboBoxItem Content="3"/>
+                <ComboBoxItem Content="4"/>
+                <ComboBoxItem Content="5"/>
+                <ComboBoxItem Content="6"/>
+                <ComboBoxItem Content="7"/>
+                <ComboBoxItem Content="8"/>
+            </ComboBox>
             <!-- Menu déroulant langue-->
             <ComboBox x:Name="LanguageComboBox" 
                       Visibility="{Binding IsStatusTextBoxVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -69,19 +86,28 @@
                 <ComboBoxItem Content="Français" IsSelected="True"/>
                 <ComboBoxItem Content="English"/>
                 <ComboBoxItem Content="Español"/>
-                <ComboBoxItem Content="Poland"/>
+                <ComboBoxItem Content="Português"/>
+                <ComboBoxItem Content="Deutsch"/>
+                <ComboBoxItem Content="Nederlands"/>
+                <ComboBoxItem Content="Čeština"/>
+                <ComboBoxItem Content="Slovenský"/>
+                <ComboBoxItem Content="Polski"/>
+                <ComboBoxItem Content="Română"/>
+                <ComboBoxItem Content="Türkçe"/>
+                <ComboBoxItem Content="Dansk"/>
+                <ComboBoxItem Content="Suomalainen"/>
             </ComboBox>
-            
+
             <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Canvas.Right="130" Canvas.Top="175" Style="{StaticResource ImageButton}" Command="{Binding CloseCommand}"/>
             <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Canvas.Left="8" Canvas.Top="587" Style="{StaticResource ImageButton}" Command="{Binding RepairGameCommand}"/>
             <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Style="{StaticResource ImageButton}" Canvas.Left="117" Canvas.Top="587" Command="{Binding SiteCommand}"/>
             <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Canvas.Left="545" Canvas.Top="353" Style="{StaticResource ImageButton}" Command="{Binding VoteCommand}" Width="150"/>
-            <ProgressBar Canvas.Left="235" Canvas.Top="390" Width="460" Height="26" Value="{Binding DownloadProgress}" Maximum="100" Minimum="0" Background="Black" Foreground="White" >
+            <ProgressBar Canvas.Left="205" Canvas.Top="270" Width="460" Height="26" Value="{Binding DownloadProgress}" Maximum="100" Minimum="0" Background="Black" Foreground="White" >
                 <ProgressBar.Template>
                     <ControlTemplate TargetType="ProgressBar">
                         <Border BorderThickness="1" CornerRadius="10" BorderBrush="Black">
                             <Border.Background>
-                                <SolidColorBrush Color="#FF07549C"/>
+                                <SolidColorBrush Color="#FF8127"/>
                             </Border.Background>
                             <Grid x:Name="PART_Track" >
                                 <Border x:Name="PART_Indicator" HorizontalAlignment="Left" CornerRadius="9,0,0,9" >
@@ -90,8 +116,8 @@
                                     </Border.Clip>
                                     <Border.Background>
                                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                            <GradientStop Color="#FF07549C" Offset="1"/>
-                                            <GradientStop Color="#FF07549C"/>
+                                            <GradientStop Color="#FEB713" Offset="1"/>
+                                            <GradientStop Color="#FEB713"/>
                                         </LinearGradientBrush>
                                     </Border.Background>
                                 </Border>
@@ -100,21 +126,25 @@
                     </ControlTemplate>
                 </ProgressBar.Template>
             </ProgressBar>
-            <TextBlock Text="{Binding ProgressDownloadSpeedInfo}" Canvas.Left="235" Canvas.Top="395" FontSize="11" Foreground="#FFEAFFEE"
+            <TextBlock Text="{Binding ProgressDownloadSpeedInfo}" Canvas.Left="205" Canvas.Top="276" FontSize="11" Foreground="#FFEAFFEE"
                        Width="460" Style="{StaticResource Arial-Rounded}" FontWeight="Light"
                        HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
-            <Grid Canvas.Left="235" Canvas.Top="418" Width="460" Height="20" Background="Black">
+            <Grid Canvas.Left="205" Canvas.Top="300" Width="460" Height="20" Background="Black">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="219*"/>
-                    <ColumnDefinition Width="8*"/>
+                    <ColumnDefinition Width="35*"/>
+                    <ColumnDefinition Width="24*"/>
+                    <ColumnDefinition Width="306*"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="78*"/>
+                    <ColumnDefinition Width="16*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="{Binding StateMessage}" Foreground="Black" FontWeight="DemiBold" Margin="5,3,5,2"
+                <TextBlock Text="{Binding StateMessage}" Foreground="Black" FontWeight="DemiBold" Margin="5,0,5,0"
                    TextAlignment="Center" VerticalAlignment="Center" Style="{StaticResource Arial-Rounded}"
-                   ToolTip="{Binding StateMessage}" Grid.ColumnSpan="2" Background="#FF07549C">
+                   ToolTip="{Binding StateMessage}" Grid.ColumnSpan="6" Background="#FF8127">
                 </TextBlock>
             </Grid>
 
-            <Grid Canvas.Left="349" Canvas.Top="128" Width="460" Height="170" Opacity="0">
+            <Grid Canvas.Left="949" Canvas.Top="128" Width="460" Height="170" Opacity="0">
                 <Grid.Background>
                     <ImageBrush ImageSource="pack://application:,,,/Resources/news_background.png"/>
                 </Grid.Background>
@@ -163,39 +193,44 @@
 
             <TextBlock Canvas.Left="-168" Canvas.Top="570" TextWrapping="Wrap" 
                        Text="{Binding Source={x:Static Uplauncher:Constants.ApplicationVersion}}" Width="166" TextAlignment="Right"/>
-            <Image Height="604" Width="84" Source="/FOND.png" HorizontalAlignment="Left" Canvas.Left="0" Canvas.Top="0" VerticalAlignment="Center"/>
-            <UI:OpaqueClickableImage Width="37" Height="37" Source="/FERMER.png" Stretch="Fill" Style="{StaticResource GlowingImage}" HorizontalAlignment="Left" Canvas.Left="828" Canvas.Top="37" VerticalAlignment="Top"/>
-            <Button Canvas.Left="828" Canvas.Top="37" Style="{StaticResource ImageButton}"
+            <Image Height="604" Width="84" Source="/FOND.png" HorizontalAlignment="Left" Canvas.Left="816" Canvas.Top="0" VerticalAlignment="Center"/>
+            <Button Canvas.Left="837" Canvas.Top="37" Style="{StaticResource ImageButton}"
                     Command="{Binding CloseCommand}">
                 <UI:OpaqueClickableImage Width="37" Height="37" Source="/FERMER.png" Stretch="Fill" Style="{StaticResource GlowingImage}" HorizontalAlignment="Left" Canvas.Left="828" Canvas.Top="37" VerticalAlignment="Top"/>
             </Button>
-            <Button Canvas.Left="388" Canvas.Top="517" Style="{StaticResource ImageButton}"
+            <Button Canvas.Left="345" Canvas.Top="347" Style="{StaticResource ImageButton}"
                     Command="{Binding PlayCommand}">
-                <UI:OpaqueClickableImage Width="136" Height="69" Source="/JOUER.png" Stretch="Fill" Style="{StaticResource GlowingImage}" HorizontalAlignment="Left" Canvas.Left="388" Canvas.Top="517" VerticalAlignment="Top"/>
+                <UI:OpaqueClickableImage Width="180" Height="200" Source="/JOUER.png" Stretch="Fill" Style="{StaticResource GlowingImage}" HorizontalAlignment="Left" Canvas.Left="388" Canvas.Top="517" VerticalAlignment="Top"/>
             </Button>
-            <!--<UI:OpaqueClickableImage Height="42" Source="/DISCORD.png" Stretch="Fill" Style="{StaticResource GlowingImage}" Width="38" HorizontalAlignment="Left" Canvas.Left="21" Canvas.Top="305" VerticalAlignment="Top"/>-->
-            <Button Canvas.Left="21" Canvas.Top="305" Style="{StaticResource ImageButton}"
+            <Button Canvas.Left="837" Canvas.Top="305" Style="{StaticResource ImageButton}"
                     Command="{Binding VoteCommand}" >
                 <UI:OpaqueClickableImage Width="38" Source="/DISCORD.png"
                                          Stretch="Fill" Style="{StaticResource GlowingImage}" />
             </Button>
             <!--<UI:OpaqueClickableImage Source="/SITE.png" Stretch="Fill" Style="{StaticResource GlowingImage}" Width="49" Height="51" Canvas.Left="11" Canvas.Top="188"/>-->
-            <Button Style="{StaticResource ImageButton}" Canvas.Left="11" Canvas.Top="188"
+            <Button Style="{StaticResource ImageButton}" Canvas.Left="837" Canvas.Top="188"
                     Command="{Binding SiteCommand}">
                 <UI:OpaqueClickableImage Width="49" Height="51"
                                          Source="./SITE.png" Stretch="Fill"
                                          Style="{StaticResource GlowingImage}" />
             </Button>
             <!--<UI:OpaqueClickableImage Width="37" Height="69" Source="/REGLAGE.png" Stretch="Fill" Style="{StaticResource GlowingImage}" Grid.IsSharedSizeScope="True" HorizontalAlignment="Left" Canvas.Left="536" Canvas.Top="517" VerticalAlignment="Top"/>-->
-            <Button Canvas.Left="536" Canvas.Top="517" Style="{StaticResource ImageButton}"
+            <Button Canvas.Left="837" Canvas.Top="477" Style="{StaticResource ImageButton}"
                     Command="{Binding RepairGameCommand}">
-                <UI:OpaqueClickableImage Width="37" Height="69"
+                <UI:OpaqueClickableImage Width="37" Height="37"
+                                         Source="/REPARER.png" Stretch="Fill"
+                                         Style="{StaticResource GlowingImage}" />
+            </Button>
+            <Button Canvas.Left="837" Canvas.Top="515" Style="{StaticResource ImageButton}"
+                    Command="{Binding DeleteGameFilesCommand}">
+                <UI:OpaqueClickableImage Width="37" Height="37"
                                          Source="/REGLAGE.png" Stretch="Fill"
                                          Style="{StaticResource GlowingImage}" />
             </Button>
-            <Button Canvas.Left="16" Canvas.Top="515" Style="{StaticResource ImageButton}"
-                    Command="{Binding DeleteGameFilesCommand}">
-                <UI:OpaqueClickableImage Width="37" Height="69"
+            <!--Source="/SELECT_DOFUS_CLIENTS.png" Stretch="Fill"-->
+            <Button Canvas.Left="837" Canvas.Top="439" Style="{StaticResource ImageButton}"
+                    Command="{Binding OpenSelectDofusClientsCommand}">
+                <UI:OpaqueClickableImage Width="37" Height="37"
                                          Source="/REGLAGE.png" Stretch="Fill"
                                          Style="{StaticResource GlowingImage}" />
             </Button>
